k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flipkart-app
  namespace: default

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flipkart-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: flipkart-app

    spec:
      containers:
        - name: flipkart-app

          image: 732231074251.dkr.ecr.ap-south-2.amazonaws.com/devops-ecr:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 5000
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
