k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: flipkart-service
  namespace: default

spec:
  type: ClusterIP

  selector:
    app: flipkart-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
