k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flipkart-ingress
  namespace: default

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: flipkart-service
                port:
                  number: 80
